monitoring/psi-prod-cluster/bases/alertmanager/oauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aicoe-alert-manager
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: aicoe-alert-manager-tls
spec:
  ports:
  - name: web
    port: 9095
    protocol: TCP
    targetPort: web
  selector:
    alertmanager: aicoe-sre-alertmanager
